--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,13 @@
 
 :root {
   --white-color:                  #ffffff;
-  --primary-color:                #535da1;
-  --secondary-color:              #14B789;
+  --primary-color:                #da627d;
+  --secondary-color:              #a53860;
   --section-bg-color:             #f9f9f9;
   --dark-color:                   #000000;
   --p-color:                      #717275;
-  --border-color:                 #e9eaeb;
-  --featured-border-color:        #727aab;
+  --border-color:                 #f9dbbd;
+  --featured-border-color:        #ffa5ab;
 
   --body-font-family:             'DM Sans', sans-serif;
 
