--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,12 @@
 
 :root {
   --white-color:                  #ffffff;
-  --primary-color:                #da627d;
-  --secondary-color:              #a53860;
+  --primary-color:                #81689D;
+  --secondary-color:              #EC53B0;
   --section-bg-color:             #f9f9f9;
   --dark-color:                   #000000;
   --p-color:                      #717275;
-  --border-color:                 #f9dbbd;
+  --border-color:                 #FFD0EC;
   --featured-border-color:        #ffa5ab;
 
   --body-font-family:             'DM Sans', sans-serif;
